Rm many deprecated usages, including old Mockito in tests - Lots of test cleanup and  improved coverage for LoaderProblem